Blender crashes when I press F8 #38042

Closed
opened 2014-01-03 06:27:11 +01:00 by Andrew Enyart · 12 comments

System Information
Kubuntu 13.10 x64 NVidia GTX 560

Blender Version
2.69.7 a5cb222

Short description of error
F8 crash

Exact steps for others to reproduce the error
Press F8 and Blender crashes. Here is the crash log:

Blender 2.69 (sub 7), Commit date: 2014-01-03 03:20, Hash a5cb222

backtrace

./bin/blender() [0xc8c0e6]
/lib/x86_64-linux-gnu/libc.so.6(+0x370b0) [0x7fe3580600b0]
./bin/blender(rna_idproperty_check+0x19) [0x179b019]
./bin/blender(RNA_property_collection_begin+0x77) [0x17a0107]
./bin/blender(WM_operator_properties_sanitize+0x30) [0xca1a20]
./bin/blender(WM_keyconfig_update+0x8c) [0xc9bc1c]
./bin/blender(wm_event_do_handlers+0x537) [0xc94b97]
./bin/blender(WM_main+0x18) [0xc8d4b8]
./bin/blender(main+0xd7f) [0xc58a3f]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf5) [0x7fe35804aea5]
./bin/blender() [0xc8ac11]

**System Information** Kubuntu 13.10 x64 NVidia GTX 560 **Blender Version** 2.69.7 a5cb222 **Short description of error** F8 crash **Exact steps for others to reproduce the error** Press F8 and Blender crashes. Here is the crash log: # Blender 2.69 (sub 7), Commit date: 2014-01-03 03:20, Hash a5cb222 # backtrace ./bin/blender() [0xc8c0e6] /lib/x86_64-linux-gnu/libc.so.6(+0x370b0) [0x7fe3580600b0] ./bin/blender(rna_idproperty_check+0x19) [0x179b019] ./bin/blender(RNA_property_collection_begin+0x77) [0x17a0107] ./bin/blender(WM_operator_properties_sanitize+0x30) [0xca1a20] ./bin/blender(WM_keyconfig_update+0x8c) [0xc9bc1c] ./bin/blender(wm_event_do_handlers+0x537) [0xc94b97] ./bin/blender(WM_main+0x18) [0xc8d4b8] ./bin/blender(main+0xd7f) [0xc58a3f] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf5) [0x7fe35804aea5] ./bin/blender() [0xc8ac11]
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @arenyart

Added subscriber: @arenyart

#38285 was marked as duplicate of this issue

#38285 was marked as duplicate of this issue
Author

I narrowed it down to the "sequencer: jump to cut" addon. Enable this addon and press F8 to reproduce this bug.

I narrowed it down to the "sequencer: jump to cut" addon. Enable this addon and press F8 to reproduce this bug.
Bastien Montagne self-assigned this 2014-01-03 08:42:02 +01:00

Yep, as soon as you have an addon using keymaps enabled, F8 crashes… I had a patch about this, should try to resume work on this issue…

Yep, as soon as you have an addon using keymaps enabled, F8 crashes… I had a patch about this, should try to resume work on this issue…

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Added subscribers: @artfunkel, @mont29

Added subscribers: @artfunkel, @mont29

◀ Merged tasks: #38285.

◀ Merged tasks: #38285.

This issue was referenced by blender/blender-addons-contrib@1713db2035

This issue was referenced by blender/blender-addons-contrib@1713db203583a1b93143b14dfa77eb447697deac

This issue was referenced by 1713db2035

This issue was referenced by 1713db203583a1b93143b14dfa77eb447697deac

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1713db2035.

Closed by commit 1713db2035.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38042
No description provided.